[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/musiclib/LegoBox/KeySelect.gd" type="Script" id=1]

[node name="KeySelect" type="HBoxContainer"]
rect_min_size = Vector2( 210, 0 )
alignment = 1
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_right = 206.0
margin_bottom = 72.0

[node name="selector" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 202.0
margin_bottom = 20.0
alignment = 1

[node name="rootPopup" type="OptionButton" parent="VBoxContainer/selector"]
margin_left = 1.0
margin_right = 37.0
margin_bottom = 20.0
rect_min_size = Vector2( 36, 0 )

[node name="scalePopup" type="OptionButton" parent="VBoxContainer/selector"]
margin_left = 41.0
margin_right = 201.0
margin_bottom = 20.0
rect_min_size = Vector2( 160, 0 )

[node name="textContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 202.0
margin_bottom = 48.0
alignment = 1

[node name="currentKeyLineEdit" type="LineEdit" parent="VBoxContainer/textContainer"]
margin_left = 1.0
margin_right = 201.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
placeholder_text = "Ex: C Ionian / F# Dorian"

[node name="random" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 202.0
margin_bottom = 72.0
alignment = 1

[node name="randomizeRoot" type="Button" parent="VBoxContainer/random"]
margin_right = 97.0
margin_bottom = 20.0
text = "Random Root"

[node name="randomizeScale" type="Button" parent="VBoxContainer/random"]
margin_left = 101.0
margin_right = 202.0
margin_bottom = 20.0
text = "Random Scale"
